Added docker-compose support

--- a/ForecastApp/ForecastApp.csproj
+++ b/ForecastApp/ForecastApp.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>6857c4a9-258c-49e6-999f-a92ca04866c5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
